Integrate OpenAI search

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,5 +21,9 @@
         </li>
     </ul>
 </div>
+<div th:if="${answer}">
+    <h2>Answer</h2>
+    <p th:text="${answer}"></p>
+</div>
 </body>
 </html>
