Add LLM link search

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,8 +22,8 @@
     </ul>
 </div>
 <div th:if="${answer}">
-    <h2>Answer</h2>
-    <p th:text="${answer}"></p>
+    <h2>Assistant Response</h2>
+    <pre th:text="${answer}"></pre>
 </div>
 </body>
 </html>
